--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,69 +7,69 @@
 
     /* BIONIX */
     .bg-gradient-green-l {
-        @apply bg-gradient-to-l from-green-700 to-lightGreen-200 w-max;
+        @apply bg-gradient-to-l from-green-700 to-lightGreen-200;
     }
 
     .bg-gradient-green-r {
-        @apply bg-gradient-to-r from-green-700 to-lightGreen-200 w-max;
+        @apply bg-gradient-to-r from-green-700 to-lightGreen-200;
     }
 
     .bg-gradient-green-bl {
-        @apply bg-gradient-to-bl from-green-700 to-lightGreen-200 w-max;
+        @apply bg-gradient-to-bl from-green-700 to-lightGreen-200;
     }
 
     .bg-gradient-green-br {
-        @apply bg-gradient-to-br from-green-700 to-lightGreen-200 w-max;
+        @apply bg-gradient-to-br from-green-700 to-lightGreen-200;
     }
 
     /* ICON */
     .bg-gradient-blue-l {
-        @apply bg-gradient-to-l from-[#348BB6] to-[#CCE1F0] w-max;
+        @apply bg-gradient-to-l from-[#348BB6] to-[#CCE1F0];
     }
 
     .bg-gradient-blue-r {
-        @apply bg-gradient-to-r from-[#348BB6] to-[#CCE1F0] w-max;
+        @apply bg-gradient-to-r from-[#348BB6] to-[#CCE1F0];
     }
 
     .bg-gradient-blue-bl {
-        @apply bg-gradient-to-bl from-[#348BB6] to-[#CCE1F0] w-max;
+        @apply bg-gradient-to-bl from-[#348BB6] to-[#CCE1F0];
     }
 
     .bg-gradient-blue-br {
-        @apply bg-gradient-to-br from-[#348BB6] to-[#CCE1F0] w-max;
+        @apply bg-gradient-to-br from-[#348BB6] to-[#CCE1F0];
     }
 
     /* RISE */
     .bg-gradient-orange-l {
-        @apply bg-gradient-to-l from-[#FF9355] to-orange-50 w-max;
+        @apply bg-gradient-to-l from-[#FF9355] to-orange-50;
     }
 
     .bg-gradient-orange-r {
-        @apply bg-gradient-to-r from-[#FF9355] to-orange-50 w-max;
+        @apply bg-gradient-to-r from-[#FF9355] to-orange-50;
     }
 
     .bg-gradient-orange-bl {
-        @apply bg-gradient-to-bl from-[#FF9355] to-orange-50 w-max;
+        @apply bg-gradient-to-bl from-[#FF9355] to-orange-50;
     }
 
     .bg-gradient-orange-br {
-        @apply bg-gradient-to-br from-[#FF9355] to-orange-50 w-max;
+        @apply bg-gradient-to-br from-[#FF9355] to-orange-50;
     }
 
     /* PARADIGM */
     .bg-gradient-purple-l {
-        @apply bg-gradient-to-l from-orange-50 to-purple-700 w-max;
+        @apply bg-gradient-to-l from-orange-50 to-purple-700;
     }
 
     .bg-gradient-purple-r {
-        @apply bg-gradient-to-r from-orange-50 to-purple-700 w-max;
+        @apply bg-gradient-to-r from-orange-50 to-purple-700;
     }
 
     .bg-gradient-purple-bl {
-        @apply bg-gradient-to-bl from-orange-50 to-purple-700 w-max;
+        @apply bg-gradient-to-bl from-orange-50 to-purple-700;
     }
 
     .bg-gradient-purple-br {
-        @apply bg-gradient-to-br from-orange-50 to-purple-700 w-max;
+        @apply bg-gradient-to-br from-orange-50 to-purple-700;
     }
 }
