--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -139,3 +139,15 @@
     background-repeat: no-repeat;
 }
 /* Toastr Styling End */
+
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px #191A1E inset !important;
+}
+/*Change text in autofill textbox*/
+input:-webkit-autofill{
+    -webkit-text-fill-color: white !important;
+}
